include the preparation steps

--- a/recipes/lasagma.html
+++ b/recipes/lasagma.html
@@ -48,8 +48,63 @@
         <li>1 1/2 cups grated Parmesan cheese
         </li>
       </ul>
+    
+    <h4>Steps</h4>
+    <h5>1. Prepare the Meat Sauce</h5>
+    <ol>
+      <li>Heat a large skillet over medium heat.</li>
+      <li>Cook 1 pound of ground beef and 1/2 pound of Italian sausage until browned.
+      </li>
+      <li>Add 1 finely chopped onion and 2-3 minced garlic cloves, and sauté until softened.
+      </li>
+      <li>Stir in 1 can (28 ounces) of crushed tomatoes, 2 cans (6 ounces each) of tomato paste, 2 cans (15 ounces each) of tomato sauce, and 1/2 cup of water.</li>
+      <li>Season with 2 tablespoons of sugar, 2 teaspoons of dried basil, 1 teaspoon of dried oregano, and salt and pepper to taste.</li>
+      <li>Let the sauce simmer for at least 30 minutes, stirring occasionally.
+      </li>
+    </ol>
+ 
+    <h5>Prepare the Bechamel Sauce</h5>
+    <ol>
+      <li>Melt 4 tablespoons of butter in a saucepan over medium heat.</li>
+      <li>Stir in 1/4 cup of all-purpose flour to form a roux.</li>
+      <li>Gradually whisk in 4 cups of milk until the mixture thickens.</li>
+      <li>Season with 1/4 teaspoon of nutmeg and salt and pepper to taste.
+      </li>
+    </ol>
 
+    <h5>Cook the Lasagna Noodles:</h5>
+    <ol>
+      <li>Cook 12 lasagna noodles according to the package instructions.</li>
+      <li>Drain and set aside.</li>
+    </ol>
 
-  </p>
+    <h5>Assemble the Lasagna:</h5>
+    <ol>
+      <li>Preheat the oven to 375°F (190°C).</li>
+      <li>Spread a thin layer of meat sauce on the bottom of a baking dish.
+      </li>
+      <li>Place a layer of cooked lasagna noodles over the sauce.
+      </li>
+      <li>Spread a layer of béchamel sauce over the noodles.
+      </li>
+      <li>Sprinkle shredded mozzarella cheese (about 4 cups) and grated Parmesan cheese (about 1 1/2 cups) over the béchamel.
+      </li>
+      <li>Repeat the layers (meat sauce, noodles, béchamel, mozzarella, and Parmesan) until all ingredients are used.</li>
+      <li>Finish with a top layer of meat sauce and a final sprinkling of mozzarella and Parmesan.
+      </li>
+    </ol>
+
+    <h5>Bake the Lasagna:</h5>
+    <ol>
+      <li>Cover the baking dish with foil.</li>
+      <li>Bake in the preheated oven for 25 minutes.</li>
+      <li>Remove the foil and bake for an additional 25 minutes, or until the cheese is golden and bubbly.
+      </li>
+    </ol>
+
+    <h5>Let it Rest:</h5>
+    <ol>
+      <li>Allow the lasagna to rest for 15 minutes before slicing and serving.</li>
+    </ol>
 </body>
 </html>
