link to the Odin recipe page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/lasagma.html">Lasagna</a>
+  <a href="recipes/lasagna.html">Lasagna</a>
 </body>
