--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -106,5 +106,7 @@
     <ol>
       <li>Allow the lasagna to rest for 15 minutes before slicing and serving.</li>
     </ol>
+    <br>
+    <p><a href="/index.html">Odin Recipes</a></p>
 </body>
 </html>
