--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -107,6 +107,6 @@
       <li>Allow the lasagna to rest for 15 minutes before slicing and serving.</li>
     </ol>
     <br>
-    <p><a href="/index.html">Odin Recipes</a></p>
+    <p><a href="../index.html">Odin Recipes</a></p>
 </body>
 </html>
